--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-progress-label",
-  "version": "3.1.7",
+  "version": "3.1.8",
   "description": "progress label component",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -39,8 +39,8 @@
     ]
   },
   "peerDependencies": {
-    "react": "^16.0.0 || ^17.0.0",
-    "react-dom": "^16.0.0 || ^17.0.0"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "babel-jest": "^24.8.0",
